src/test/ui/specialization/defaultimpl/specialization-wfcheck.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/specialization-wfcheck.rs:3:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete

error[E0277]: the trait bound `U: Eq` is not satisfied
  --> $DIR/specialization-wfcheck.rs:7:17
   |
LL | trait Foo<'a, T: Eq + 'a> { }
   |                  -- required by this bound in `Foo`
LL | 
LL | default impl<U> Foo<'static, U> for () {}
   |                 ^^^^^^^^^^^^^^^ the trait `Eq` is not implemented for `U`
   |
help: consider restricting type parameter `U`
   |
LL | default impl<U: Eq> Foo<'static, U> for () {}
   |               ^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
